--- a/apps/blog/content/blog/2020_10_poker-room-17/index.mdx
+++ b/apps/blog/content/blog/2020_10_poker-room-17/index.mdx
@@ -2,7 +2,7 @@
 title: Poker Room Part 17 - Obliczanie siły ręki
 
 date: '2020-10-31T22:00:00.000Z'
-description: 'Dodaje funkcje obliczające siłe ręki pokereowej (para, full, itp.)'
+description: 'Dodaje funkcje obliczające siłę ręki pokerowej (para, full, itp.).'
 category: 'Live Coding'
 thumb: 17.png
 yt: nUPNjmU0Coo
